Fix cursive N alignment on product photos

--- a/style.css
+++ b/style.css
@@ -866,17 +866,17 @@ h1, h2, h3, h4 {
 
 .logo-fix-henna {
   top: 48.5%;
-  left: 50.3%;
-  width: 50px;
-  height: 50px;
+  left: 49.2%;
+  width: 54px;
+  height: 54px;
   font-size: 1.8rem;
 }
 
 .logo-fix-oil {
-  top: 52%;
-  left: 50.5%;
-  width: 62px;
-  height: 62px;
+  top: 50.8%;
+  left: 50%;
+  width: 66px;
+  height: 66px;
   font-size: 2.2rem;
 }
 
